--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,17 @@ sigops/firebase.json
 sigops/.firebaserc
 **/firebase.json
 
-sigops/node_modules/
+node_modules/
+config.js
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
